--- a/package.json
+++ b/package.json
@@ -43,5 +43,8 @@
     "@arbetsmyra/prettier-config": "^1.0.0",
     "prettier": "^2.0.4"
   },
-  "prettier": "@arbetsmyra/prettier-config"
+  "prettier": "@arbetsmyra/prettier-config",
+  "renovate": {
+    "extends": ["@arbetsmyra"]
+  }
 }
