--- a/package.json
+++ b/package.json
@@ -10,19 +10,9 @@
       ],
       "automerge": true,
       "automergeType": "branch",
-      "rebaseStalePrs": true,
-      "packageRules": [
-        {
-          "packagePatterns": [
-            "*"
-          ],
-          "automerge": true,
-          "automergeType": "branch",
-          "depTypeList": [
-            "devDependencies"
-          ]
-        }
-      ]
+      "major": {
+        "automerge": false
+      }
     }
   },
   "scripts": {
